@@ -3,7 +3,6 @@ import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import static java.lang.foreign.SegmentAllocator.implicitAllocator;
 import static org.unix.foo_h.*;
 
 public class PanamaCallback {
@@ -12,9 +11,8 @@ public class PanamaCallback {
      * C code will call this static method.
      */
     public static void callMePlease() {
-        MemorySegment cString = implicitAllocator()
-                .allocateUtf8String("[JAVA] Inside callMePlease() method - I'm being called from C.\n");
-        foo_h.printf(cString);
+        MemorySegment cString = Arena.ofAuto().allocateFrom("[JAVA] Inside callMePlease() method - I'm being called from C.\n");
+        foo_h.printf.makeInvoker().apply(cString);
     }
 
     /**
@@ -22,9 +20,8 @@ public class PanamaCallback {
      * @param value C will pass in a number. Your code will double it.
      */
     public static void doubleMe(int value) {
-        MemorySegment cString = implicitAllocator()
-                .allocateUtf8String("[JAVA] Inside doubleMe() method, %d times 2 = %d.\n".formatted(value, value*2));
-        foo_h.printf(cString);
+        MemorySegment cString = Arena.ofAuto().allocateFrom("[JAVA] Inside doubleMe() method, %d times 2 = %d.\n".formatted(value, value*2));
+        foo_h.printf.makeInvoker().apply(cString);
     }
 
     /**
@@ -33,29 +30,33 @@ public class PanamaCallback {
      * @throws Throwable
      */
     public static void main(String[] args) throws Throwable {
-        try (var memorySession = MemorySession.openConfined()) {
+        try (var arena = Arena.ofConfined()) {
             // MemorySegment C's printf using a C string
-            MemorySegment cString = implicitAllocator()
-                    .allocateUtf8String("[Java] Callbacks! Panama style\n");
+            MemorySegment cString = arena.allocateFrom("[Java] Callbacks! Panama style\n");
 
-            printf(cString);
+            foo_h.printf.makeInvoker().apply(cString);
             fflush(NULL());
-            //fprintf(__stdoutp$get(), cString);
+
+            // 1. Obtain linker
+            var linker = Linker.nativeLinker();
+
+            // 2. Obtaining symbol lookup from two places.
+            SymbolLookup foolibLookup = SymbolLookup.libraryLookup(System.mapLibraryName("mylib"),  Arena.ofAuto())
+                    .or(SymbolLookup.loaderLookup())
+                    .or(Linker.nativeLinker().defaultLookup());
+//            SymbolLookup stdlibLookup = SymbolLookup.loaderLookup()
+//                    .or(linker.defaultLookup());
 
             // my_callback_function C function receives a callback (pointer to a function)
-            MemorySegment callback1 = SymbolLookup.loaderLookup().lookup("my_callback_function")
-                    .or(() -> Linker.nativeLinker().defaultLookup().lookup("my_callback_function"))
-                    .orElseThrow(() -> new RuntimeException("cant find symbol"));
-            var my_callback_functionMethodHandle = Linker.nativeLinker().downcallHandle(
+            MemorySegment callback1 = foolibLookup.findOrThrow("my_callback_function");
+            var my_callback_functionMethodHandle = linker.downcallHandle(
                     callback1,
                     FunctionDescriptor.ofVoid(C_POINTER)
             );
 
             // my_callback_function2 C function receives a callback (pointer to a function)
-            MemorySegment callback2 = SymbolLookup.loaderLookup().lookup("my_callback_function2")
-                    .or(() -> Linker.nativeLinker().defaultLookup().lookup("my_callback_function2"))
-                    .orElseThrow(() -> new RuntimeException("cant find symbol"));
-            var my_callback_function2MethodHandle = Linker.nativeLinker().downcallHandle(
+            MemorySegment callback2 = foolibLookup.findOrThrow("my_callback_function2");
+            var my_callback_function2MethodHandle = linker.downcallHandle(
                     callback2,
                     FunctionDescriptor.ofVoid(C_POINTER, C_INT)
             );
@@ -68,14 +69,14 @@ public class PanamaCallback {
 
             // Create a stub as a native symbol to be passed into native function.
             // void (*ptr)()
-            MemorySegment callMePleaseNativeSymbol = Linker.nativeLinker().upcallStub(
+            MemorySegment callMePleaseNativeSymbol = linker.upcallStub(
                     onCallMePlease,
                     FunctionDescriptor.ofVoid(),
-                    memorySession);
+                    arena);
 
             // Invoke C function receiving a callback
             // void my_callback_function(void (*ptr)())
-            my_callback_functionMethodHandle.invokeExact((Addressable) callMePleaseNativeSymbol);
+            my_callback_functionMethodHandle.invokeExact(callMePleaseNativeSymbol);
 
             // Create a method handle to the Java function as a callback
             MethodHandle onDoubleMe = MethodHandles.lookup()
@@ -88,7 +89,7 @@ public class PanamaCallback {
             MemorySegment doubleMeNativeSymbol = Linker.nativeLinker().upcallStub(
                     onDoubleMe,
                     FunctionDescriptor.ofVoid(C_INT),
-                    memorySession);
+                    arena);
 
             // Invoke C function receiving a callback
             // void my_callback_function2(void (*ptr)(int))
